--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,8 +4,7 @@
     display: flex;
     justify-content: flex-end;
     padding: 3px;
-    background-color: var(--primary);
-    border: 1px solid var(--tertiary);
+    background-color: var(--secondary);
 }
 
 .toggle-theme-btn {
