--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ html, body {
 }
 
 body {
-    background-image: url("/background.png");
+    /*background-image: url("/background.png");*/
+    background-color: var(--primary);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,15 +26,15 @@ body {
 }
 
 :root {
-    --primary: #4481bb;
-    --secondary: #81bb44;
-    --tertiary: #bb4481;
+    --primary: #e5e7eb;
+    --secondary: #475569;
+    --tertiary: #2dd4bf;
     --text: #000000;
 }
 
 [data-theme="dark-theme"] {
-    --primary: #002739;
-    --secondary: #273900;
-    --tertiary: #390027;
+    --primary: #1f2937;
+    --secondary: #4b5563;
+    --tertiary: #2dd4bf;
     --text: #ffffff;
 }
